# image-render-blender-human

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  setup.cfg
docs/source/: conf.py  humgen.md
docs/source/diagrams/: anyhuman2.drawio
src/anyhuman/: __init__.py  cls_gen_random_human.py  cls_humgen.py  dev.py  ops.py
src/anyhuman/paramgenerators/: __init__.py  persona.py  zwicky.py
src/anyhuman/personas/: alice.json  bob.json
src/anyhuman2/: README.MD  Tasks.md  __init__.py  cls_humgen.py  dev.py  ops.py  test_OPLINNO-237.md  test_OPLINNO-239.md  test_OPLINNO-240.md  tools.py
src/anyhuman2/labelling/: cls_label_skeleton.py
src/anyhuman2/labelling/mapping/: IMS_bones.json  WFLW_bones.json  openpose_hand_anyhuman.json  openpose_hand_humgen.json
src/anyhuman2/paramgenerators/: GeneralRandomParameters.py  __init__.py  file.py  persona.py  random_full.py  random_realistic.py
src/anyhuman2/personas/: Anna.json  Branden_v4.json  David.json  FILE_male.json  FULL_RANDOM_female.json  FULL_RANDOM_male.json  bob.json
test_files/HumgenV4/: HG_Seth.json
