[metadata]
name = image-render-blender-human
version = 3.1.4

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where = src
exclude = dev

[options.package_data]
anyhuman = 
    personas/*.json

[options.entry_points]
catharsys.blender.modify =
    /catharsys/blender/modify/object/hum-gen/placement/vehicle-seats:1.0 = anyhuman.ops:PlaceHumanOnSeat
    /catharsys/blender/modify/object/hum-gen/modify-human:1.0 = anyhuman.ops:ModifyHumanPostCreation
    /catharsys/blender/modify/object/hum-gen/update-image-paths:1.0 = anyhuman.ops:UpdateImageFilePath
    /catharsys/blender/modify/object/hum-gen/replace-materials:1.0 = anyhuman.ops:ReplaceMaterials

catharsys.blender.generate =
    /catharsys/blender/generate/object/hum-gen-3d:1.0 = anyhuman.ops:GenerateHuman
